[package]
name = "wuhu"
version = "3.0.0"
description = "wuhu Steam manifest manager"
authors = ["wuhu"]
edition = "2021"

[lib]
name = "wuhu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
