[package]
name = "wuhu"
version = "3.1.1"
description = "wuhu Steam manifest manager"
authors = ["wuhu"]
edition = "2021"

[lib]
name = "wuhu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
